--- a/Assets/Scripts/todo.txt
+++ b/Assets/Scripts/todo.txt
@@ -18,4 +18,5 @@ non-starred = important
             - Movement
             - Eating (*)
             - Mating (*)
+                - Genetic Algorithm (survival of the fittest)
     - Spawning
